--- a/notebooks/model_trials.ipynb
+++ b/notebooks/model_trials.ipynb
@@ -16,7 +16,7 @@
     "%load_ext autoreload\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from textblob import TextBlob\n",
-    "import fastText\n",
+    "import fasttext\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.metrics import f1_score, accuracy_score\n",
@@ -109,7 +109,7 @@
    ],
    "source": [
     "# Read test data\n",
-    "df = pd.read_csv('data/sst/sst_test.txt', sep='\\t', header=None,\n",
+    "df = pd.read_csv('../data/sst/sst_test.txt', sep='\\t', header=None,\n",
     "                   names=['truth', 'sentence'],\n",
     "                  )\n",
     "df['truth'] = df['truth'].str.replace('__label__', '')\n",
@@ -117,13 +117,6 @@
     "print(df.dtypes)\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -422,10 +415,18 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Load fastText yelp review (5-class) trained model\n",
-    "ft_model = fastText.load_model('models/fasttext/fasttext_yelp_review_full.ftz')"
+    "ft_model = fasttext.load_model('../models/fasttext/fasttext_yelp_review_full.ftz')"
    ]
   },
   {
@@ -572,42 +573,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read 0M words\n",
-      "Number of words:  18279\n",
-      "Number of labels: 5\n",
-      "Progress: 100.0%  words/sec/thread: 873255  lr: 0.000000  loss: 0.060957  eta: 0h0m .2%  words/sec/thread: 875780  lr: 0.464096  loss: 0.789396  eta: 0h0m m 14.0%  words/sec/thread: 877877  lr: 0.429843  loss: 0.416243  eta: 0h0m 0h0m m 19.2%  words/sec/thread: 877510  lr: 0.404039  loss: 0.311001  eta: 0h0m 20.9%  words/sec/thread: 877575  lr: 0.395529  loss: 0.293991  eta: 0h0m 26.0%  words/sec/thread: 874859  lr: 0.369924  loss: 0.229703  eta: 0h0m 0m 0.192080  eta: 0h0m %  words/sec/thread: 873911  lr: 0.345752  loss: 0.178180  eta: 0h0m 33.8%  words/sec/thread: 870264  lr: 0.330814  loss: 0.158771  eta: 0h0m 872976  lr: 0.322727  loss: 0.156234  eta: 0h0m 38.6%  words/sec/thread: 869093  lr: 0.307001  loss: 0.146085  eta: 0h0m 39.8%  words/sec/thread: 869592  lr: 0.300972  loss: 0.141149  eta: 0h0m 0m   words/sec/thread: 867860  lr: 0.282846  loss: 0.127444  eta: 0h0m 47.8%  words/sec/thread: 867311  lr: 0.261128  loss: 0.117493  eta: 0h0m %  words/sec/thread: 869982  lr: 0.219348  loss: 0.103415  eta: 0h0m 871957  lr: 0.203174  loss: 0.098247  eta: 0h0m %  words/sec/thread: 871967  lr: 0.187762  loss: 0.093566  eta: 0h0m %  words/sec/thread: 872060  lr: 0.179071  loss: 0.091397  eta: 0h0m 65.8%  words/sec/thread: 871515  lr: 0.170787  loss: 0.088864  eta: 0h0m %  words/sec/thread: 869670  lr: 0.101300  loss: 0.074434  eta: 0h0m %  words/sec/thread: 870922  lr: 0.069935  loss: 0.069930  eta: 0h0m 87.6%  words/sec/thread: 871039  lr: 0.062134  loss: 0.068864  eta: 0h0m 0.065852  eta: 0h0m   loss: 0.064801  eta: 0h0m 871401  lr: 0.022731  loss: 0.063085  eta: 0h0m %  words/sec/thread: 872606  lr: 0.012433  loss: 0.062032  eta: 0h0m %  words/sec/thread: 873345  lr: 0.004059  loss: 0.061156  eta: 0h0m \n"
-     ]
-    }
-   ],
    "source": [
-    "# We train using fastText's command line utility using the below command\n",
-    "!~/fastText-0.1.0/fasttext supervised -input data/sst/sst_train.txt -output models/sst -wordNgrams 3 -lr 0.5 -epoch 100"
+    "#### Define hyperparameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hyper_params = {\n",
+    "    \"lr\": 0.5,\n",
+    "    \"epoch\": 100,\n",
+    "    \"wordNgrams\": 3,\n",
+    "    \"dim\": 100,\n",
+    "    \"ws\": 3,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = fasttext.train_supervised(input=\"../data/sst/sst_train.txt\", **hyper_params)\n",
+    "model.save_model('../models/fasttext/sst.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Macro F1-score: 0.37359276004432385\n",
-      "Accuracy: 39.95475113122172\n"
+      "Macro F1-score: 0.3759215239876213\n",
+      "Accuracy: 40.542986425339365\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "ft_model = fastText.load_model('models/fasttext/sst.bin')\n",
+    "ft_model = fasttext.load_model('../models/fasttext/sst.bin')\n",
     "df['fasttext_pred'] = df['sentence'].str.lower().apply(fasttext_score)\n",
     "# Get model accuracy and f1 score\n",
     "acc = print_accuracy(df, 'fasttext_pred')\n",
